Updated website title to 'Coal Mine Management'

--- a/coal-mine-management/public/manifest.json
+++ b/coal-mine-management/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Coal Mine",
-  "name": "Create React App Sample",
+  "name": "Coal Mine Management System",
   "icons": [
     {
       "src": "favicon.ico",
